@@ -23,10 +23,11 @@ import java.util.HashMap;
 import java.util.Iterator;
 
 import javax.sql.DataSource;
+import java.sql.Types;
 
 /**
  * @author thickerson
- *
+ * <p>
  * TODO To change the template for this generated type comment go to Window -
  * Preferences - Java - Code Style - Code Templates
  */
@@ -67,7 +68,9 @@ public class ArchivedDatasetFileDAO extends AuditableEntityDAO {
         this.setTypeExpected(9, TypeNames.INT);// owner id
         this.setTypeExpected(10, TypeNames.STRING);// format
         this.setTypeExpected(11, TypeNames.STRING);// status
-
+        this.setTypeExpected(12, TypeNames.STRING);// job UUID
+        this.setTypeExpected(13, TypeNames.STRING);// job execution UUID
+        this.setTypeExpected(14, TypeNames.STRING); // job type
     }
 
     public EntityBean create(EntityBean eb) {
@@ -77,13 +80,21 @@ public class ArchivedDatasetFileDAO extends AuditableEntityDAO {
         variables.put(Integer.valueOf(1), fb.getName());
         variables.put(Integer.valueOf(2), Integer.valueOf(fb.getDatasetId()));
         variables.put(Integer.valueOf(3), Integer.valueOf(fb.getExportFormatId()));
-        variables.put(Integer.valueOf(4), fb.getFileReference());
+        if (fb.getFileReference() != null){
+            variables.put(Integer.valueOf(4), fb.getFileReference());
+        } else {
+            nullVars.put(new Integer(4), new Integer(Types.VARCHAR));
+            variables.put(Integer.valueOf(4), null);
+        }
         variables.put(Integer.valueOf(5), Integer.valueOf(fb.getFileSize()));
         variables.put(Integer.valueOf(6), new Double(fb.getRunTime()));
         variables.put(Integer.valueOf(7), Integer.valueOf(fb.getOwnerId()));
         variables.put(Integer.valueOf(8), new java.sql.Timestamp(fb.getDateCreated().getTime()));
         variables.put(Integer.valueOf(9), fb.getFormat());
         variables.put(Integer.valueOf(10), fb.getStatus());
+        variables.put(Integer.valueOf(11), fb.getJobUuid());
+        variables.put(Integer.valueOf(12), fb.getJobExecutionUuid());
+        variables.put(Integer.valueOf(13), fb.getJobType());
 
         this.executeWithPK(digester.getQuery("create"), variables, nullVars);
         if (isQuerySuccessful()) {
@@ -99,14 +110,22 @@ public class ArchivedDatasetFileDAO extends AuditableEntityDAO {
         variables.put(Integer.valueOf(1), fb.getName());
         variables.put(Integer.valueOf(2), Integer.valueOf(fb.getDatasetId()));
         variables.put(Integer.valueOf(3), Integer.valueOf(fb.getExportFormatId()));
-        variables.put(Integer.valueOf(4), fb.getFileReference());
+        if (fb.getFileReference() != null){
+            variables.put(Integer.valueOf(4), fb.getFileReference());
+        } else {
+            nullVars.put(new Integer(4), new Integer(Types.VARCHAR));
+            variables.put(Integer.valueOf(4), null);
+        }
         variables.put(Integer.valueOf(5), Integer.valueOf(fb.getFileSize()));
         variables.put(Integer.valueOf(6), new Double(fb.getRunTime()));
         variables.put(Integer.valueOf(7), Integer.valueOf(fb.getOwnerId()));
         variables.put(Integer.valueOf(8), new java.sql.Timestamp(fb.getDateCreated().getTime()));
         variables.put(Integer.valueOf(9), fb.getFormat());
         variables.put(Integer.valueOf(10), fb.getStatus());
-        variables.put(Integer.valueOf(11), Integer.valueOf(fb.getId()));
+        variables.put(Integer.valueOf(11), fb.getJobUuid());
+        variables.put(Integer.valueOf(12), fb.getJobExecutionUuid());
+        variables.put(Integer.valueOf(13), fb.getJobType());
+        variables.put(Integer.valueOf(14), Integer.valueOf(fb.getId()));
 
         this.execute(digester.getQuery("update"), variables, nullVars);
         if (isQuerySuccessful()) {
@@ -129,18 +148,20 @@ public class ArchivedDatasetFileDAO extends AuditableEntityDAO {
         fb.setOwnerId(((Integer) hm.get("owner_id")).intValue());
         fb.setFormat((String) hm.get("format"));
         fb.setStatus((String) hm.get("status"));
+        fb.setJobUuid((String) hm.get("job_uuid"));
+        fb.setJobExecutionUuid((String) hm.get("job_execution_uuid"));
+        fb.setJobType((String) hm.get("job_type"));
         UserAccountDAO uaDAO = new UserAccountDAO(this.ds);
         UserAccountBean owner = (UserAccountBean) uaDAO.findByPK(fb.getOwnerId());
         fb.setOwner(owner);
         return fb;
     }
 
-    public void deleteArchiveDataset(ArchivedDatasetFileBean adfBean){
+    public void deleteArchiveDataset(ArchivedDatasetFileBean adfBean) {
         HashMap variables = new HashMap();
         variables.put(Integer.valueOf(1), adfBean.getId());
         this.execute(digester.getQuery("deleteArchiveDataset"), variables);
     }
-
 
 
     public Collection findAll() {
@@ -216,6 +237,53 @@ public class ArchivedDatasetFileDAO extends AuditableEntityDAO {
 
         return al;
     }
+
+    public ArrayList findByJobUuid(String jobUuid) {
+        this.setTypesExpected();
+        ArrayList al = new ArrayList();
+        HashMap variables = new HashMap();
+        variables.put(Integer.valueOf(1), String.valueOf(jobUuid));
+        String sql = digester.getQuery("findByJobUuid");
+        ArrayList alist = this.select(sql, variables);
+        Iterator it = alist.iterator();
+        while (it.hasNext()) {
+            ArchivedDatasetFileBean fb = (ArchivedDatasetFileBean) this.getEntityFromHashMap((HashMap) it.next());
+            al.add(fb);
+        }
+        return al;
+    }
+
+    public ArrayList findByJobUuidWithFileReference(String jobUuid) {
+        this.setTypesExpected();
+        ArrayList al = new ArrayList();
+        HashMap variables = new HashMap();
+        variables.put(Integer.valueOf(1), String.valueOf(jobUuid));
+        String sql = digester.getQuery("findByJobUuidWithFileReference");
+        ArrayList alist = this.select(sql, variables);
+        Iterator it = alist.iterator();
+        while (it.hasNext()) {
+            ArchivedDatasetFileBean fb = (ArchivedDatasetFileBean) this.getEntityFromHashMap((HashMap) it.next());
+            al.add(fb);
+        }
+        return al;
+    }
+
+
+    public EntityBean findByJobExecutionUuid(String jobExecutionUuid) {
+        this.setTypesExpected();
+        ArchivedDatasetFileBean fb = new ArchivedDatasetFileBean();
+        HashMap variables = new HashMap();
+        variables.put(Integer.valueOf(1), String.valueOf(jobExecutionUuid));
+
+        String sql = digester.getQuery("findByJobExecutionUuid");
+        ArrayList alist = this.select(sql, variables);
+        Iterator it = alist.iterator();
+        if (it.hasNext()) {
+            fb = (ArchivedDatasetFileBean) this.getEntityFromHashMap((HashMap) it.next());
+        }
+        return fb;
+    }
+
     public Collection findAllByPermission(Object objCurrentUser, int intActionType, String strOrderByColumn, boolean blnAscendingSort, String strSearchPhrase) {
         ArrayList al = new ArrayList();
 
